src/test/ui/stability-attribute/generics-default-stability.stderr
error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:17:13
   |
LL | impl Trait1<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:21:13
   |
LL | impl Trait1<isize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:25:13
   |
LL | impl Trait2<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:84:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                             ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:84:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:89:12
   |
LL |     let _: Struct4 = STRUCT4;
   |            ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:90:12
   |
LL |     let _: Struct4<usize> = STRUCT4;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:91:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct4`: test
  --> $DIR/generics-default-stability.rs:91:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:97:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:97:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:102:12
   |
LL |     let _: Struct5 = STRUCT5;
   |            ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:103:12
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:105:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated struct `unstable_generic_param::Struct5`: test
  --> $DIR/generics-default-stability.rs:105:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |            ^^^^^^^^^^^^^^

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:36:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:40:20
   |
LL |     let _: Struct1<usize> = STRUCT1;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:41:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:70:27
   |
LL |     let _: Struct3<isize, usize> = STRUCT3;
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:72:27
   |
LL |     let _: Struct3<isize, isize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:73:27
   |
LL |     let _: Struct3<usize, usize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:97:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:103:20
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:105:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'box_alloc_param'
  --> $DIR/generics-default-stability.rs:113:24
   |
LL |     let _: Box1<isize, System> = Box1::new(1);
   |                        ^^^^^^
   |
   = help: add `#![feature(box_alloc_param)]` to the crate attributes to enable

warning: use of deprecated field `unstable_generic_param::Struct4::field`: test
  --> $DIR/generics-default-stability.rs:84:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct4::field`: test
  --> $DIR/generics-default-stability.rs:91:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct5::field`: test
  --> $DIR/generics-default-stability.rs:97:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated field `unstable_generic_param::Struct5::field`: test
  --> $DIR/generics-default-stability.rs:105:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                                       ^^^^^^^^

error: aborting due to 13 previous errors; 16 warnings emitted

For more information about this error, try `rustc --explain E0658`.
